--- a/templates/Registro.html
+++ b/templates/Registro.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous">
     </script>
     
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <title>Registro</title>
 </head>
 
@@ -22,7 +22,7 @@
     <header>
         <nav>
             <ul>
-                <li> <a class="navbar-brand" href="/index.html">
+                <li> <a class="navbar-brand" href="./index.html">
                         <img src="../static/imagen/libro.webp" alt="Libro">
                         <p>Biblioteca Socrates</p>
                     </a>
@@ -63,7 +63,7 @@
         <a href="#">Términos y condiciones</a>
         <a href="#">Preguntas Frecuentes</a>
     </footer>
-    <script src="../static/js/registro.js"></script>
+    <script src="../static/js/fetch.js"></script>
 </body>
 
 </html>
