--- a/templates/Edicion.html
+++ b/templates/Edicion.html
@@ -13,8 +13,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous">
     </script>
-    <script src="../static/js/search.js"></script>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <title>Edición de Libros</title>
 </head>
 
@@ -23,7 +22,7 @@
         <nav>
             <ul>
                 <li> <a class="navbar-brand" href="./Libro.html">
-                        <img src="/static/imagen/libro.webp" alt="Logo">
+                        <img src="../static/imagen/libro.webp" alt="Logo">
                         <p>Biblioteca Socrates</p>
                     </a>
                 </li>
@@ -37,47 +36,47 @@
             <div>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" id="busqueda" type="search" placeholder="¿Qué libro busca?" aria-label="Search">
-                    <button class="btn btn-dark" type="submit">Buscar</button>
+                    <button class="btn btn-dark" type="button" onclick="buscarLibro()" >Buscar</button>
                 </form>
+                <div id="resultados"></div>
             </div>
         </section>
 
         <section>
-            <form class="row g-3 formulario">
+            <form class="row g-3 formulario" id="edicion">
                 <div class="col-md-3">
-                    <label for="inputTitulo" class="form-label">Título</label>
-                    <input type="text" class="form-control" id="inputTitulo">
+                    <label for="titulo" class="form-label">Título</label>
+                    <input type="text" class="form-control" id="titulo">
                 </div>
                 <div class="col-md-3">
-                    <label for="inputAge" class="form-label">Año</label>
-                    <input type="date" class="form-control" id="inputAge">
+                    <label for="age" class="form-label">Año</label>
+                    <input type="date" class="form-control" id="age">
                 </div>
                 <div class="col-md-3">
-                    <label for="inputEjemplar" class="form-label">Ejemplares</label>
-                    <input type="number" class="form-control" id="inputEjemplar">
+                    <label for="ejemplar" class="form-label">Ejemplares</label>
+                    <input type="number" class="form-control" id="ejemplar">
                 </div>
                 <div class="col-md-3">
-                    <label for="inputPrestado" class="form-label">Prestados</label>
-                    <input type="number" class="form-control" id="inputPrestado">
+                    <label for="prestado" class="form-label">Prestados</label>
+                    <input type="number" class="form-control" id="prestado">
                 </div>
 
                 <div class="col-md-3">
-                    <label for="inputRestante" class="form-label">Restantes</label>
-                    <input type="number" class="form-control" id="inputRestante">
+                    <label for="restante" class="form-label">Restantes</label>
+                    <input type="number" class="form-control" id="restante">
                 </div>
                 <div class="col-md-3">
-                    <label for="inputAutor" class="form-label">Autor</label>
-                    <input type="text" class="form-control" id="inputAutor">
+                    <label for="autor" class="form-label">Autor</label>
+                    <input type="text" class="form-control" id="autor">
                 </div>
                 <div class="col-md-3">
-                    <label for="inputEditorial" class="form-label">Editorial</label>
-                    <input type="texT" class="form-control" id="inputEditorial">
+                    <label for="editorial" class="form-label">Editorial</label>
+                    <input type="texT" class="form-control" id="editorial">
                 </div>
                 <div class="col-6">
-                    <button type="submit" class="btn  btn-warning">Modificar</button>
-                </div>
-                <div class="col-3">
-                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                    <input type="hidden"  name="id" id="id-objeto" value="">
+                    <button type="button" class="btn  btn-warning" id="modificar" onclick="update(document.querySelector('#id-objeto').value)">Modificar</button>
+                    <button type="button" class="btn btn-danger" id="eliminar" onclick="delete_objeto(document.querySelector('#id-objeto').value)">Eliminar</button>
                 </div>
             </form>
         </section>
@@ -88,6 +87,7 @@
         <a href="#">Términos y condiciones</a>
         <a href="#">Preguntas Frecuentes</a>
     </footer>
+   <script src="../static/js/fetch1.js"></script>
 </body>
 
 </html>
